# project-stock_Return

./: 15minutes_model.ipynb  Arima.ipynb  Deep_learning.ipynb  Deep_learning3.ipynb  Deep_learning_2.ipynb  Detailes.md  EDA-external data.ipynb  FInal_ML_models.ipynb  Final_ML_models (2).ipynb  Final_ML_models .ipynb  README.md  Raw_stocks_data  SPY.csv  SPY_clean.csv  SPY_with_events.csv  SPY_with_events.pkl  SPY_with_seasonal.pkl  _best_gru.h5  _best_lstm.h5  act vs forecast.xlsx  app.ipynb  app.py  best_gru.h5  best_gru_with_external.h5  best_gru_with_feat.h5  best_lstm.h5  best_lstm_with_external.h5  best_lstm_with_feat.h5  best_return_gru.h5  best_return_lstm.h5  combined_cleaned_add.csv  combined_cleaned_add.pkl  complet_df.csv  complet_df.pkl  cpi_release_dates_2020_2025.csv  data_for_model  df_with_QQQ.pkl  df_with_ev_ind.csv  df_with_ev_ind.pkl  external_data.pkl  (+9 more)
raw_files/: DF_with_gru_pred  Prophet_events  QQQ  Raw_stocks_data  SPY  _best_gru.h5  _best_lstm.h5  _best_return_gru2.keras  _best_return_gru3.keras  _best_return_lstm2.keras  act vs forecast.csv  add_seasonality  best_gru.h5  best_gru_with_external.h5  best_gru_with_feat.h5  best_lstm.h5  best_lstm_with_feat.h5  best_price_lstm_ext.keras  best_return_gru.h5  best_return_lstm.h5  check_xgb.csv  combined_cleaned_add.csv  combined_cleaned_add.pkl  combined_cleaned_add_with_QQQ.pkl  cpi_release_dates_2020_2025.xlsx  df_with_QQQ.pkl  df_with_ev_ind.csv  external_data.pkl  gru_own_feat.keras  gru_price.keras  gru_with_feat1.keras  metrics.csv  price_lstm.keras  price_own_feat.csv  random_forest.csv  (+7 more)
