[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["omerkobi <omerkobi9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.1"
notebook = "^7.3.3"
ipykernel = "^6.29.5"
yfinance = "^0.2.55"
pandas-datareader = "^0.10.0"
scikit-learn = "^1.6.1"
prophet = "^1.1.6"
altair = "^5.5.0"
statsmodels = "^0.14.4"
pandas = "^2.2.3"
numpy = "^2.2.4"
seaborn = "^0.13.2"
xgboost = "^3.0.0"
openpyxl = "^3.1.5"
matplotlib-inline = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
